<resources>
    <string name="app_name">Flowerly</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_for_user">ForUserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_user_but">UserButActivity</string>

    <string name="userapply1">
        1. Общие положения Пользовательского соглашения
        
                </string>


    <string name="userapply2">
        1.1 В данном документе и связанных с ним отношениях Сторон применяются
следующие определения:
            </string>
    <string name="userapply3">
            ◦ Приложение — мобильное приложение советчик по уходу за домашними растениями, помогающее ухаживать за цветами; \n

◦ Проектная команда — команда, в составе которой находятся студенты
группы ИП:20: Маркелова Е.А., Сухова С.С., разработавшая Приложение и
владеющая им; \n
◦ Пользователь — лицо, использующее Приложение; \n
◦ Данные — информация о растениях, предоставленная Пользователем,
включая фотографии, информацию о растениях пользователя; \n
◦ Соглашение — пользовательское соглашение, регламентирующее
отношения между Проектной командой и Пользователем; \n
◦ Персональные данные — любая информация, относящаяся к
определенному или определяемому на его основе субъекту Персональных данных; \n
◦ Обработка персональных данных — действия с Персональными
данными, включая сбор, хранение и их использование; \n
◦ Камера — камера устройства, на котором установлено Приложение; \n
◦ Распознавание растения — определения растения по фотографии; \n
◦ Согласие — Согласие на обработку и предоставление фотографий и
информации Пользователя, а также доступ к Камере.
            </string>

    <string name="userapply4">
        1.2 Использование Приложения Пользователем любыми способами и в любой
форме, не превышающей его функций и возможностей, включая:
            </string>
    <string name="userapply5">
       ◦ Регистрация и/или авторизация; \n
◦ Создание представлений из готовой справочной базы данных домашних
растений и их фильтрация; \n
◦ Удаление, изменение, добавление домашних растений Пользователя в
базу данных Приложения с возможным уточнением свойств содержания каждого из
них; \n
◦ Определение растений с помощью датчиков Камеры; \n
◦ Измерение освещенности через сенсоры мобильного устройства; \n
◦ Диагностирование заболеваний растений с помощью датчиков Камеры; \n
◦ Подбор рекомендаций по уходу за Растением; \n
◦ Составление данных об уходе за растением; \n
создает договор на условиях настоящего Соглашения в соответствии с
положениями ст.437 и 438 Гражданского кодекса Российской Федерации.
            </string>

    <string name="userapply6">
          1.3 Воспользовавшись любой из указанных выше возможностей по
использованию Приложения вы подтверждаете, что:
            </string>
    <string name="userapply7">
          а) Ознакомились с условиями настоящего Соглашения в полном объеме до
начала использования Приложения. \n
б) Принимаете все условия настоящего Соглашения в полном объеме без каких-
либо изъятий и ограничений с вашей стороны и обязуетесь их соблюдать или
прекратить использование Приложения. Если вы не согласны с условиями
настоящего Соглашения или не имеете права на заключение договора на их основе,
вам следует незамедлительно прекратить любое использование Приложения и
удалить его с устройства. \n
в) Проектная команда не несет ответственности за любые убытки, понесенные
Пользователем в связи с использованием Приложения: несоответствие Приложения
ожиданиям Пользователя, перебои в работе Приложения, вызванные форс-
мажорными обстоятельствами. \n
г) Соглашение (в том числе любая из его частей) может быть изменено
Проектной командой без какого-либо специального уведомления и в любой
промежуток времени.
            </string>

    <string name="userapply8">
          2. Дополнительные условия Пользовательского соглашения

            </string>

    <string name="userapply9">
2.1 Использование функциональных возможностей Приложения допускается
только после прохождения Пользователем регистрации и авторизации в Приложении
в соответствии с установленной Проектной командой процедурой.
            </string>

    <string name="userapply10">
2.2 Технические, организационные и коммерческие условия использования
Приложения, в том числе его функциональных возможностей доводятся до сведения
Пользователей путем личного общения с членами Проектной команды
            </string>

    <string name="userapply11">
2.3 Выбранные Пользователем логин и пароль являются необходимой и
достаточной информацией для доступа Пользователя в Приложение. Пользователь не
имеет права передавать свои логин и пароль третьим лицам, несет полную
ответственность за их сохранность, самостоятельно выбирая способ их хранения.
            </string>



</resources>